--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Budget Tracker Pro</title>
-    <meta name="description" content="A web-based budgeting tool for tracking accounts, expenses, and savings with real-time updates." />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <title>My Budgets & Goals</title>
+    <meta name="description" content="Multi-currency budgets, bills with FX, fixed savings, loans, goal tracking and reports — all in one place." />
+    <meta name="theme-color" content="#2563eb" />
+    <link rel="icon" type="image/png" href="https://mybudgetsandgoals.com/BudgetAndGoalsLogo.png" />
+    <link rel="apple-touch-icon" href="https://mybudgetsandgoals.com/BudgetAndGoalsLogo.png" />
 
-    <meta property="og:title" content="Budget Tracker Pro" />
-    <meta property="og:description" content="A web-based budgeting tool for tracking accounts, expenses, and savings with real-time updates." />
+    <meta property="og:title" content="My Budgets & Goals" />
+    <meta property="og:description" content="Multi-currency budgets, bills with FX, fixed savings, loans, goal tracking and reports — all in one place." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og.jpg" />
+    <meta property="og:image" content="https://mybudgetsandgoals.com/BudgetAndGoalsLogo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/og.jpg" />
+    <meta name="twitter:image" content="https://mybudgetsandgoals.com/BudgetAndGoalsLogo.png" />
   </head>
 
   <body>
